--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ td {
 				YAS
 			</a>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar">
-				<span class="icon-bar"></span>
+				<span class="icon-bar"> Hello we are here </span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
